--- a/notebooks/testing_lms.ipynb
+++ b/notebooks/testing_lms.ipynb
@@ -553,7 +553,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we're using an LLM to evaluate a property, we need **high precision**, i.e. we need the LLM to be right when it claims a property is violated. Test are never exhaustive, and thus a false positive is worse than a false negative when testing. If the LLM misses a few violations, it just means our test won't be as exhaustive as it could be. However, if it claims a violation when there isn't one, we won't be able to trust the tests when they matter most (when they fail). We show a quick example of low precision in [this gist](https://gist.github.com/marcotcr/9ab4ba0f54d9a87f577adf6c36715b92), where GPT-4 is used to compare between the outputs of two models solving quadratic equations (you can think of this as evaluating the property `model1 is better than model2`), and GPT-4 cannot reliably select the right model even for an example where it can solve the equation correctly.\n",
+    "If we're using an LLM to evaluate a property, we need **high precision**, i.e. we need the LLM to be right when it claims a property is violated. Tests are never exhaustive, and thus a false positive is worse than a false negative when testing. If the LLM misses a few violations, it just means our test won't be as exhaustive as it could be. However, if it claims a violation when there isn't one, we won't be able to trust the tests when they matter most (when they fail). We show a quick example of low precision in [this gist](https://gist.github.com/marcotcr/9ab4ba0f54d9a87f577adf6c36715b92), where GPT-4 is used to compare between the outputs of two models solving quadratic equations (you can think of this as evaluating the property `model1 is better than model2`), and GPT-4 cannot reliably select the right model even for an example where it can solve the equation correctly.\n",
     "\n",
     "**Perception is easier than generation:** While it's reasonable to check the output of GPT 3.5 with a stronger model (GPT-4), does it make sense to use an LLM to judge its own output? If it can't produce an output according to instructions, can we reasonably hope it evaluates the properties with high accuracy? While it may seem counterintuitive at first, the answer is yes, because perception is often easier than generation. Consider the following (non-exhaustive) reasons:  \n",
     "1. _Generation requires planning_: even if the property we're evaluating is 'did the model follow the instruction', evaluating an existing text requires no 'planning', while generation requires the LLM to produce text that follows the instruction step by step (and thus it requires it to somehow 'plan' the steps that will lead to a right solution from the beginning, or to be able to correct itself if it goes down the wrong path _without changing the partial output it already generated_).\n",
@@ -2621,7 +2621,7 @@
    "source": [
     "fails = '\\n----\\n'.join(['EMAIL: ' + x for x in error_inputs])\n",
     "question = f'''I have a tool that takes an email and makes it more concise, without losing any important information.\n",
-    "I will show you a few emails where the tool fails to do its job, becaues the output is missing important information. Your goal is to try to come up with more emails that the tool would fail on.\n",
+    "I will show you a few emails where the tool fails to do its job, because the output is missing important information. Your goal is to try to come up with more emails that the tool would fail on.\n",
     "FAILURES:\n",
     "{fails}\n",
     "----\n",
