Fixed all bugs by replacing tokenizer

--- a/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
+++ b/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
@@ -29,9 +29,12 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "# Create a LlamaCppSettings instance and set the model path.\n",
+    "# Create a LlamaCppSettings instance and set the model path and tokenizer name.\n",
     "settings = guidance.llms.LlamaCppSettings()\n",
-    "settings.model = \"../ggml-v2-models/gpt4-x-vicuna-13B.ggml.q5_0.bin\""
+    "settings.model = \"../ggml-v2-models/WizardLM-7B-uncensored.ggml.q5_1.bin\"\n",
+    "settings.n_gpu_layers = 10\n",
+    "settings.n_threads = 12\n",
+    "settings.tokenizer_name = \"ehartford/WizardLM-7B-Uncensored\""
    ],
    "metadata": {
     "collapsed": false
