--- a/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
+++ b/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
@@ -34,6 +34,7 @@
     "settings.model = \"../ggml-v2-models/WizardLM-7B-uncensored.ggml.q5_1.bin\"\n",
     "settings.n_gpu_layers = 10\n",
     "settings.n_threads = 12\n",
+    "# Hugginface original tokenizer needed at the moment.\n",
     "settings.tokenizer_name = \"ehartford/WizardLM-7B-Uncensored\""
    ],
    "metadata": {
