Implement Chat mode for guidance

--- a/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
+++ b/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "# Import guidance.\n",
@@ -35,10 +35,7 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-24T20:46:48.222089800Z",
-     "start_time": "2023-05-24T20:46:46.027057800Z"
-    }
+    "is_executing": true
    }
   },
   {
@@ -49,10 +46,20 @@
     "# Create a LlamaCppSettings instance and set the model path and tokenizer name.\n",
     "settings = guidance.llms.LlamaCppSettings()\n",
     "settings.model = \"../ggml-v2-models/WizardLM-7B-uncensored.ggml.q5_1.bin\"\n",
-    "settings.n_gpu_layers = 10\n",
-    "settings.n_threads = 12\n",
     "# Hugginface original tokenizer needed at the moment.\n",
-    "settings.tokenizer_name = \"ehartford/WizardLM-7B-Uncensored\""
+    "settings.tokenizer_name = \"ehartford/WizardLM-7B-Uncensored\"\n",
+    "\n",
+    "# Other models would look like this:\n",
+    "# settings.model = \"../ggml-v3-models/gpt4-x-vicuna-13B.ggmlv3.q5_1.bin\"\n",
+    "# settings.tokenizer_name = \"TheBloke/gpt4-x-vicuna-13B-HF\"\n",
+    "\n",
+    "# Or like this:\n",
+    "# settings.model = \"../ggml-v3-models/Manticore-13B.ggmlv3.q5_1.bin\"\n",
+    "# settings.tokenizer_name = \"openaccess-ai-collective/manticore-13b\"\n",
+    "\n",
+    "# Set additional arguments like number of threads and gpu layers.\n",
+    "settings.n_gpu_layers = 10\n",
+    "settings.n_threads = 12"
    ],
    "metadata": {
     "collapsed": false,
@@ -211,6 +218,72 @@
     "program = guidance(prompt + \"\\n\" + jsonformer2guidance(json_schema))\n",
     "out = program(llm=llama)\n",
     "print(out)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "settings =  guidance.llms.LlamaCppSettings()\n",
+    "settings.model = \"../ggml-v3-models/Manticore-13B-Chat-Pyg.ggmlv3.q5_1.bin\"\n",
+    "settings.n_gpu_layers = 10\n",
+    "settings.n_threads = 12\n",
+    "settings.tokenizer_name = \"openaccess-ai-collective/manticore-13b-chat-pyg\"\n",
+    "settings.before_role = \"<|\"\n",
+    "settings.after_role = \"|>\"\n",
+    "llama = guidance.llms.LlamaCpp(settings=settings, caching=False)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "# llama = guidance.llms.LlamaCpp(settings=settings, caching=False)\n",
+    "experts = guidance('''\n",
+    "{{#system~}}\n",
+    "You are a helpful and terse assistant.\n",
+    "{{~/system}}\n",
+    "\n",
+    "{{#user~}}\n",
+    "I want a response to the following question:\n",
+    "{{query}}\n",
+    "Name 3 world-class experts (past or present) who would be great at answering this?\n",
+    "Don't answer the question yet.\n",
+    "{{~/user}}\n",
+    "\n",
+    "{{#assistant~}}\n",
+    "{{gen 'expert_names' temperature=0 max_tokens=300}}\n",
+    "{{~/assistant}}\n",
+    "\n",
+    "{{#user~}}\n",
+    "Great, now please answer the question as if these experts had collaborated in writing a joint anonymous answer.\n",
+    "{{~/user}}\n",
+    "\n",
+    "{{#assistant~}}\n",
+    "{{gen 'answer' temperature=0 max_tokens=500}}\n",
+    "{{~/assistant}}\n",
+    "''', llm=llama)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(experts(query='How can I be more productive?', llm=llama))"
    ],
    "metadata": {
     "collapsed": false
