--- a/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
+++ b/notebooks/api_examples/llms/LlamaCpp/LlamaCpp.ipynb
@@ -2,14 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# This notebook contains usage examples of the llama-cpp-python support in guidance\n",
+    "# The first example is RPG character json generator.\n",
+    "# The second example takes a jsonformer scheme as input and generate a valid json.\n",
+    "# The third example uses the chat mode of guidance."
+   ],
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-05-24T20:46:43.388084400Z",
-     "start_time": "2023-05-24T20:46:40.833523300Z"
-    }
-   },
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -23,13 +30,21 @@
    "source": [
     "# Install llama-cpp-python.\n",
     "!pip install llama-cpp-python"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-24T20:46:43.388084400Z",
+     "start_time": "2023-05-24T20:46:40.833523300Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
+    "\n",
     "# Import guidance.\n",
     "import guidance"
    ],
@@ -116,6 +131,7 @@
     }
    ],
    "source": [
+    "# 1st Example\n",
     "# we can pre-define valid option sets\n",
     "valid_weapons = [\"sword\", \"axe\", \"mace\", \"spear\", \"bow\", \"crossbow\"]\n",
     "\n",
@@ -157,6 +173,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# 2nd Example\n",
     "# define a recursive function that takes a jsonformer schema and returns a guidance program\n",
     "def jsonformer2guidance(schema, key=None, indent=0):\n",
     "    out = \"\"\n",
@@ -228,6 +245,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# 3rd Example\n",
     "settings =  guidance.llms.LlamaCppSettings()\n",
     "settings.model = \"../ggml-v3-models/Manticore-13B-Chat-Pyg.ggmlv3.q5_1.bin\"\n",
     "settings.n_gpu_layers = 10\n",
