--- a/notebooks/guaranteeing_valid_syntax.ipynb
+++ b/notebooks/guaranteeing_valid_syntax.ipynb
@@ -177,21 +177,9 @@
     }
    ],
    "source": [
-    "# ...that we could also selectively serialize the dictionary to JSON\n",
+    "# ...that we could also serialize the dictionary to JSON\n",
     "import json\n",
-    "\n",
-    "# Retrieve the dictionary of all variables from out.variables()\n",
-    "all_variables = out.variables()\n",
-    "\n",
-    "# Specify the keys of interest\n",
-    "desired_keys = ['description', 'valid_weapons', 'name', 'age', 'armor', 'weapon', 'class', 'mantra', 'strength', 'items']\n",
-    "\n",
-    "# Create a new dictionary containing only the desired keys\n",
-    "filtered_variables = {key: all_variables[key] for key in desired_keys}\n",
-    "\n",
-    "# Serialize the filtered dictionary into JSON\n",
-    "json_data = json.dumps(filtered_variables)\n",
-    "print(json_data)"
+    "json.dumps({k:v for k,v in out.variables().items() if k != \"llm\"})"
    ]
   },
   {
