--- a/notebooks/guaranteeing_valid_syntax.ipynb
+++ b/notebooks/guaranteeing_valid_syntax.ipynb
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "'{\"description\": \"A quick and nimble fighter.\", \"valid_weapons\": [\"sword\", \"axe\", \"mace\", \"spear\", \"bow\", \"crossbow\"], \"name\": \"Ranger\", \"age\": \"20\", \"armor\": \"plate\", \"weapon\": \"sword\", \"class\": \"fighter\", \"mantra\": \"I am the ranger.\", \"strength\": \"10\", \"items\": [\"dagger\", \"shield\", \"bow\"]}'"
+       "'{\"llm\": <guidance.llms._transformers.Transformers at 0x7fae471f63e0>, \"description\": \"A quick and nimble fighter.\", \"valid_weapons\": [\"sword\", \"axe\", \"mace\", \"spear\", \"bow\", \"crossbow\"], \"name\": \"Ranger\", \"age\": \"20\", \"armor\": \"plate\", \"weapon\": \"sword\", \"class\": \"fighter\", \"mantra\": \"I am the ranger.\", \"strength\": \"10\", \"items\": [\"dagger\", \"shield\", \"bow\"]}'"
       ]
      },
      "execution_count": 7,
