Fix examples for role_simulator function raises "Exception: Error generating stop tokens for geneach loop." #172

--- a/notebooks/chat.ipynb
+++ b/notebooks/chat.ipynb
@@ -442,7 +442,7 @@
     "{{~/assistant}}\n",
     "\n",
     "{{~! Then the conversation unrolls }}\n",
-    "{{~#geneach 'conversation'}}\n",
+    "{{~#geneach 'conversation' stop=False}}\n",
     "{{#user~}}\n",
     "User: {{set 'this.input' (await 'input')}}\n",
     "Comment: Remember, answer as a {{role}}. Start your utterance with {{role}}:\n",
