--- a/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
+++ b/notebooks/chatgpt_vs_open_source_on_harder_tasks.ipynb
@@ -2256,7 +2256,7 @@
     "COMMAND: command\n",
     "I will run the commands on my terminal, and paste the output back to you. Once you are done with the task, please type DONE.\n",
     "{{/user}}\n",
-    "{{#geneach 'commands'}}\n",
+    "{{#geneach 'commands' stop=False}}\n",
     "{{#assistant~}}\n",
     "{{gen 'this.command' temperature=0}}\n",
     "{{~/assistant~}}\n",
