--- a/notebooks/chat.ipynb
+++ b/notebooks/chat.ipynb
@@ -453,8 +453,8 @@
     "{{~/assistant}}\n",
     "{{~/geneach}}''')\n",
     "\n",
-    "republican = role_simulator(role='Republican')\n",
-    "democrat = role_simulator(role='Democrat')\n",
+    "republican = role_simulator(role='Republican', await_missing=True)\n",
+    "democrat = role_simulator(role='Democrat', await_missing=True)\n",
     "\n",
     "first_question = '''What do you think is the best way to stop inflation?'''\n",
     "republican = republican(input=first_question, first_question=None)\n",
