Fix typos ; Update guidance_acceleration.ipynb

--- a/notebooks/guidance_acceleration.ipynb
+++ b/notebooks/guidance_acceleration.ipynb
@@ -22,9 +22,9 @@
      "output_type": "stream",
      "text": [
       "# prefix tokens: 36\n",
-      "With guidance accelaration and token healing: 1.780165433883667\n",
-      "                  With guidance accelaration: 1.4087750911712646\n",
-      "               Without guidance accelaration: 2.530573606491089\n",
+      "With guidance acceleration and token healing: 1.780165433883667\n",
+      "                  With guidance acceleration: 1.4087750911712646\n",
+      "               Without guidance acceleration: 2.530573606491089\n",
       "       Single generation call of same length: 13.744869470596313\n"
      ]
     }
@@ -50,7 +50,7 @@
     "program = guidance(template, llm=llm)\n",
     "a = program(prefix=prefix)\n",
     "end = time.time()\n",
-    "print(f\"With guidance accelaration and token healing:\", end - start)\n",
+    "print(f\"With guidance acceleration and token healing:\", end - start)\n",
     "del llm.model_obj\n",
     "torch.cuda.empty_cache()\n",
     "\n",
@@ -61,7 +61,7 @@
     "program = guidance(template, llm=llm)\n",
     "b = program(prefix=prefix)\n",
     "end = time.time()\n",
-    "print(f\"                  With guidance accelaration:\", end - start)\n",
+    "print(f\"                  With guidance acceleration:\", end - start)\n",
     "del llm.model_obj\n",
     "torch.cuda.empty_cache()\n",
     "\n",
@@ -72,7 +72,7 @@
     "program = guidance(template, llm=llm)\n",
     "b = program(prefix=prefix)\n",
     "end = time.time()\n",
-    "print(f\"               Without guidance accelaration:\", end - start)\n",
+    "print(f\"               Without guidance acceleration:\", end - start)\n",
     "del llm.model_obj\n",
     "torch.cuda.empty_cache()\n",
     "\n",
